--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -33,7 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: Build image and store in GitHub Container Registry
-    permissions: write-all
+    permissions: 
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -71,6 +72,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: Build-Docker-Image
     name: Deploy app container to Azure
+    permissions: 
+      contents: write
     steps:
       - name: "Login via Azure CLI"
         uses: azure/login@v2
